@@ -19,16 +19,10 @@
 
 #include <geos/simplify/TopologyPreservingSimplifier.h>
 #include <geos/simplify/TaggedLinesSimplifier.h>
-
-
-//#include <geos/simplify/DouglasPeuckerLineSimplifier.h>
-//#include <geos/geom/Geometry.h> // for AutoPtr typedefs
-//#include <geos/geom/MultiPolygon.h> 
-//#include <geos/geom/CoordinateSequence.h> // for AutoPtr typedefs
-//#include <geos/geom/GeometryFactory.h> 
-//#include <geos/geom/CoordinateSequenceFactory.h> 
-//#include <geos/geom/util/GeometryTransformer.h> // for DPTransformer inheritance
-//#include <geos/util/IllegalArgumentException.h> 
+// for LineStringTransformer inheritance
+#include <geos/geom/util/GeometryTransformer.h>
+// for LineStringMapBuilderFilter inheritance
+#include <geos/geom/GeometryComponentFilter.h>
 
 #include <memory> // for auto_ptr
 #include <cassert>
@@ -45,6 +39,84 @@ using namespace geos::geom;
 
 namespace geos {
 namespace simplify { // geos::simplify
+
+typedef std::map<const geom::Geometry*, TaggedLineString> LinesMap;
+
+
+namespace { // module-statics
+
+class LineStringTransformer: public geom::util::GeometryTransformer
+{
+
+public:
+
+	friend class TopologyPreservingSimplifier;
+
+protected:
+
+	CoordinateSequence::AutoPtr transformCoordinates(
+			const CoordinateSequence* coords,
+			const Geometry* parent);
+
+private:
+
+	LineStringTransformer(TopologyPreservingSimplifier& simp);
+
+	LinesMap& linestringMap;
+
+}
+
+/*private*/
+LineStringTransformer(LinesMap& nMap)
+	:
+	linestringMap(nMap)
+{
+}
+
+/*protected*/
+CoordinateSequence::AutoPtr
+LineStringTrasnformer::transformCoordinates(
+		const CoordinateSequence* coords,
+		const Geometry* parent);
+{
+	if ( dynamic_cast<const LineString*>(parent) )
+	{
+		LinesMap::iterator it = linestringMap.find(parent);
+		assert( it != linestringMap.end() );
+		
+		TaggedLineString& taggedLine = it->second;
+
+		return taggedLine.getResultCoordinates();
+	}
+
+	// for anything else (e.g. points) just copy the coordinates
+	return GeometryTransformer::transformCoordinates(coords, parent);
+}
+
+//----------------------------------------------------------------------
+
+class LineStringMapBuilderFilter: public geom::GeometryComponentFilter
+{
+
+public:
+
+	void filter_ro(const Geometry* geom)
+	{
+		if ( const LinearRing* lr=dynamic_cast<const LinearRing*>(
+				parent) )
+		{
+			TaggedLineString taggedLine(lr, 4);
+			linestringMap.put(geom, taggedLine);
+      }
+      else if (geom instanceof LineString) {
+        TaggedLineString taggedLine = new TaggedLineString((LineString) geom, 2);
+        linestringMap.put(geom, taggedLine);
+      }
+	}
+};
+
+
+} // end of module-statics
 
 /*public static*/
 std::auto_ptr<geom::Geometry>
@@ -80,24 +152,32 @@ TopologyPreservingSimplifier::setDistanceTolerance(double d)
 std::auto_ptr<geom::Geometry> 
 TopologyPreservingSimplifier::getResultGeometry()
 {
-	LineStringMapBuilderFilter lsmbf;
-	inputGeom->apply(new lsmbf);
-	lineSimplifier->simplify(linestringMap.begin(), linestringMap.end());
+	LinesMap linestringMap;
 
-	LineStringTransformer trans;
+	LineStringMapBuilderFilter lsmbf(linestringMap);
+	inputGeom->apply_ro(lsmbf);
+
+	for (LinesMap::iterator
+		it=linestringMap.begin(), itEnd=linestringMap.end();
+		it != itEnd;
+		++it)
+	{
+		lineSimplifier->simplifyLine(&(it->second)); 
+	}
+
+
+	LineStringTransformer trans(linestringMap);
 	Geometry result = trans.transform(inputGeom);
 
 	return result;
 }
-
-TopologyPreservingSimplifier::
 
 } // namespace geos::simplify
 } // namespace geos
 
 /**********************************************************************
  * $Log$
- * Revision 1.1  2006/04/13 10:39:12  strk
- * Initial implementation of TaggedLinesSimplifier class
+ * Revision 1.2  2006/04/13 14:25:17  strk
+ * TopologyPreservingSimplifier initial port
  *
  **********************************************************************/
